app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */

::-webkit-scrollbar { display: none; }

.centerbox {  margin-right: auto; 
  margin-left: auto; 
  width: 640px; 
  overflow: scroll; }

.relative { position: relative; }

.narrow { width: 200px; }

small { color: #9B59BB; }

.pretty { color: #9B59BB; }

.pretty-background { background-color: #9B59BB; }

.center { text-align: center; }

body { position: relative;
  background-color: #fff;
  margin: 0 auto; }

.left { float: left; }
.right { float: right; }

p { color: black; }

h3 { font-size: 18px !important; line-height: 22px !important }

.white { color: white; }

.red { color: red; }

.visible { overflow: visible; }

.quiet { display: none; }

table { border-collapse: separate; 
  border-spacing: 5px 20px; 
  border: 1px;
  border-color: white; }

td { color: black;
  text-align: center; }

.hr { height: 1px;
  background: #9B59BB;
  margin: 0px;}

#footer { position: fixed;
   left: 0px;
   bottom: 0px;
   height: 30px;
   width: 100%;
   background: #999; }

